<resources>
    <string name="app_name">DTC</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">register</string>
    <string name="string_enter_AMI">Εισάγετε AMI</string>
    <string name="string_enter_AMTH">Εισάγετε AMΘ</string>
    <string name="string_enter_name">Εισάγετε Ονομα</string>
    <string name="string_enter_surname">Εισάγετε Επώνυμο</string>
    <string name="string_enter_telephone">Εισάγετε Τηλέφωνο</string>
    <string name="string_enter_house">Εισάγετε Κατοικία</string>
    <string name="string_enter_sex">Εισάγετε Φύλο</string>
    <string name="string_date_of_Birth">Εισάγετε Ημερομηνία Γέννησης</string>
    <string name="string_diagnosis_age">Εισάγετε Ηλικία κατα την Διάγνωση</string>
    <string name="string_surgury_date">Εισάγετε Ημερομηνία Χειρουργείου</string>
    <string name="string_surgeon">Χειρουργός</string>
    <string name="string_histological">Ιστολογική</string>
    <string name="string_max_diameter">Μέγιστη Διάμετρος</string>
    <string name="string_airthmos_estiwn">Αριθμός Εστιών</string>
    <string name="string_lovos">Λοβός</string>
    <string name="string_diithisi">Διήθηση</string>
    <string name="string_arithmos_ekserethentwn_Lns">Αριθμός Εξαιρεθέντων LNs</string>
    <string name="string_arithmos_diithimenwn_Lns">Αριθμός Διηθημένων LNs</string>
    <string name="string_stage"> Stage</string>
    <string name="string_hmeromhnia_metegxeirhtikou">Ημερομηνία Μετεγχειρητικού</string>
    <string name="string_proetoimasia">Προετοιμασία</string>
    <string name="string_scan">Scan</string>
    <string name="string_uptake">Upatake 48h%</string>
    <string name="string_TSH">TSH</string>
    <string name="string_HTG">HTG</string>
    <string name="string_Tg_Ab">Tg-Ab</string>
    <string name="string_TM">TM</string>
    <string name="string_us">U/S</string>
    <string name="string_hmeromhnia_ablation">Ημερομηνία Ablation</string>
    <string name="string_choose_username">Εισάγετε Ψευδώνυμο</string>
    <string name="string_choose_password">Εισάγετε Κώδικό</string>
    <string name="string_enter_email">Εισάγετε email</string>
    <string name="button_register">Register</string>
    <string name="title_activity_notifier">notifier</string>
    <string name="title_activity_wikimethod">Wikimethod</string>
    <string name="title_activity_text_view1">TextView1</string>
    <string name="title_activity_text_view2">TextView2</string>
    <string name="title_activity_text_view3">TextView3</string>
    <string name="title_activity_text_view4">TextView4</string>
    <string name="title_activity_text_view5">TextView5</string>
    <string name="title_activity_text_view6">TextView6</string>
    <string name="title_activity_text_view7">TextView7</string>
    <string name="title_activity_text_view8">TextView8</string>
    <string name="title_activity_text_view9">TextView9</string>
    <string name="title_activity_text_view10">TextView10</string>
    <string name="title_activity_remindermethod">Remindermethod</string>
    <string name="title_activity_patiencelogin">patiencelogin</string>
    <string name="title_activity_registered">registered</string>
    <string name="title_activity_patientinfo">patientinfo</string>
    <string-array name="header_titles">
        <item>1. Ορμόνες και ενδοκρινείς αδένες</item>
        <item>2. Ο Θυρεοειδής αδένας</item>
        <item>3. Όζοι θυρεοειδούς αδένα</item>
        <item>4. Κακοήθη νεοπλάσματα θυρεοειδούς</item>
        <item>5. Αντιμετώπιση καρκίνου θυρεοειδούς αδένα</item>
        <item>6. Θεραπεία καρκίνου θυρεοειδούς με ραδιενεργό ιώδιο</item>
        <item>7. Παρακολούθηση ασθενών με θυρεοειδικό καρκίνο (follow-up)</item>
        <item>8. Καρκίνος θυρεοειδούς και εγκυμοσύνη</item>

        <item>ΒΙΒΛΙΟΓΡΑΦΙΑ</item>

    </string-array>
    <string-array name="h1_titles">
        <item>1.1 Τι είναι οι ορμόνες και πως δρουν στο σώμα μας;</item>
        <item>1.2 Ποιοι είναι οι ενδοκρινείς αδένες και πώς λειτουργούν;</item>
    </string-array>
    <string-array name="h2_titles">
        <item>2.1 Ποια είναι τα χαρακτηριστικά του θυρεοειδούς αδένα;</item>
        <item>2.2 Ποιες είναι οι λειτουργίες του θυρεοειδούς και πώς ρυθμίζονται;</item>
    </string-array>
    <string-array name="h3_titles">
        <item>3.1 Θυρεοειδικός όζος: Τι είναι και πως αντιμετωπίζονται οι ασθενείς με θυρεοειδικό όζο;</item>
        <item>3.2 Πόσο σημαντικό είναι το ιστορικό και η φυσική εξέταση του ασθενούς;</item>
        <item>3.3 Η μέτρηση της TSH στον ορό του αίματος ασθενών με θυρεοειδικό όζο: Γιατί είναι σημαντικό να μετράται η TSH;</item>
        <item>3.4 Υπερηχογραφικός έλεγχος θυρεοειδούς: Ποιοι πρέπει να υποβάλλονται σε υπερηχογράφημα θυρεοειδούς; </item>
        <item>3.5 Τι είναι η FNA; Πότε και πώς πρέπει να γίνεται; </item>
        <item>3.6 Τι σημαίνουν τα αποτελέσματα της βιοψίας μου με FNA; </item>
        <item>3.7 Ποιες άλλες εργαστηριακές εξετάσεις πρέπει να γίνουν εφόσον έχει διαπιστωθεί η παρουσία όζου στον θυρεοειδή μου;</item>
        <item>3.8 Σπινθηρογράφημα θυρεοειδούς </item>
    </string-array>
    <string-array name="h4_titles">
        <item>4.1 Ταξινόμηση και σταδιοποίηση του θυρεοειδικού καρκίνου</item>
        <item>4.2 Πόσο συχνός είναι ο καρκίνος του θυρεοειδούς; (Γιατί σε εμένα;)</item>
        <item>4.3 Ποιοι παράγοντες είναι υπεύθυνοι για την εκδήλωση θυρεοειδικού καρκίνου;</item>
    </string-array>
    <string-array name="h5_titles">
        <item>5.1 Ποιοι είναι οι στόχοι της θεραπείας του θυρεοειδικού καρκίνου;</item>
        <item>5.2 Θυρεοειδεκτομή</item>
        <item>5.3 Μετεγχειρητικός έλεγχος: Ποίες εξετάσεις πρέπει να κάνω μετά τη θυρεοειδεκτομή;</item>
    </string-array>
    <string-array name="h6_titles">
        <item>6.1 Ιστορική αναδρομή ραδιονουκλιδικής θεραπείας</item>
        <item>6.2 Ποιοι ασθενείς υποβάλλονται σε θεραπεία με ραδιενεργό ιώδιο</item>
        <item>6.3 Πώς λειτουργεί το ραδιενεργό ιώδιο; Με ποιόν μηχανισμό με θεραπεύει;</item>
        <item>6.4 Υπάρχουν αντενδείξεις που δεν μου επιτρέπουν να λάβω θεραπευτική δόση ραδιενεργού ιωδίου;</item>
        <item>6.5 Ποια προετοιμασία πρέπει να κάνω για να υποβληθώ σε θεραπεία με ραδιενεργό ιώδιο;</item>
        <item>6.6 Πώς γίνεται η χορήγηση θεραπευτικής δόσης ραδιενεργού ιωδίου; Που θα μείνω; Τι θα αντιμετωπίσω κατά την παραμονή μου στο νοσοκομείο;</item>
        <item>6.7 Ποια μέτρα ακτινοπροστασίας πρέπει να λάβω μετά την έξοδό μου από το νοσοκομείο;</item>
        <item>6.8 Ποιες ανεπιθύμητες ενέργειες μπορεί να προκαλέσει η θεραπεία με ραδιενεργό ιώδιο;</item>
        <item>6.9 Τι ακολουθεί μετά τη θεραπεία με ραδιενεργό ιώδιο; </item>
        <item>6.10 Αλλάζει η διαδικασία της θεραπείας μου εάν διαγνωστώ με μεταστατική νόσο;</item>

    </string-array>
    <string-array name="h7_titles">
        <item>7.1  Πως ελέγχεται το αποτέλεσμα της θεραπείας με ραδιενεργό ιώδιο;</item>
        <item>7.2 Ποιες εξετάσεις θα πρέπει να κάνω στα πλαίσια της παρακολούθησής μου (follow-up) εφ’ εξής;</item>
    </string-array>
    <string-array name="h8_titles">
        <item>8.1  Καρκίνος θυρεοειδούς και εγκυμοσύνη</item>
    </string-array>
</resources>